--- a/static/index.html
+++ b/static/index.html
@@ -30,7 +30,7 @@
                       <div class="slideshow__slide-background-wrap background-absolute">
                           <div class="slideshow__slide-background background-absolute">
                               <div class="slideshow__slide-image-wrap background-absolute">
-                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('https://images.pexels.com/photos/190537/pexels-photo-190537.jpeg?auto=compress&cs=tinysrgb&h=1080&w=1920');"></div>
+                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('gallery/img_1.png');"></div>
                               </div>
                           </div>
                       </div>
@@ -40,10 +40,10 @@
           <div class="slideshow__slide-caption">
               <div class="slideshow__slide-caption-text">
                   <div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
-                      <h1 class="slideshow__slide-caption-title">Everything broken can be repaired</h1>
+                      <!-- <h1 class="slideshow__slide-caption-title">Everything broken can be repaired</h1>
                       <a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="#">
                           <span class="slideshow__slide-caption-subtitle-label">See how</span>
-                      </a>
+                      </a> -->
                   </div>
               </div>
           </div>
@@ -56,7 +56,7 @@
                       <div class="slideshow__slide-background-wrap background-absolute">
                           <div class="slideshow__slide-background background-absolute">
                               <div class="slideshow__slide-image-wrap background-absolute">
-                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('https://images.pexels.com/photos/110649/pexels-photo-110649.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=1080&w=1920');"></div>
+                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('gallery/img_2.JPG');"></div>
                               </div>
                           </div>
                       </div>
@@ -66,10 +66,10 @@
           <div class="slideshow__slide-caption">
               <div class="slideshow__slide-caption-text">
                   <div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
-                      <h1 class="slideshow__slide-caption-title">See through the field</h1>
+                      <!-- <h1 class="slideshow__slide-caption-title">See through the field</h1>
                       <a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="#">
                           <span class="slideshow__slide-caption-subtitle-label">Learn more about</span>
-                      </a>
+                      </a> -->
                   </div>
               </div>
           </div>
@@ -82,7 +82,7 @@
                       <div class="slideshow__slide-background-wrap background-absolute">
                           <div class="slideshow__slide-background background-absolute">
                               <div class="slideshow__slide-image-wrap background-absolute">
-                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('https://images.pexels.com/photos/196666/pexels-photo-196666.jpeg?auto=compress&cs=tinysrgb&h=1080&w=1920');"></div>
+                                  <div class="slideshow__slide-image background-absolute" style="background-image: url('gallery/img_3.JPG');"></div>
                               </div>
                           </div>
                       </div>
@@ -92,15 +92,67 @@
           <div class="slideshow__slide-caption">
               <div class="slideshow__slide-caption-text">
                   <div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
-                      <h1 class="slideshow__slide-caption-title">Hey, take a time to relax!</h1>
+                      <!-- <h1 class="slideshow__slide-caption-title">Hey, take a time to relax!</h1>
                       <a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="#">
                           <span class="slideshow__slide-caption-subtitle-label">Everybody needs</span>
-                      </a>
+                      </a> -->
                   </div>
               </div>
           </div>
       </div>
       
+      <div class="slideshow__slide js-slider-home-slide is-prev" data-slide="4">
+        <div class="slideshow__slide-background-parallax background-absolute js-parallax" data-speed="-1" data-position="top" data-target="#js-header">
+            <div class="slideshow__slide-background-load-wrap background-absolute">
+                <div class="slideshow__slide-background-load background-absolute">
+                    <div class="slideshow__slide-background-wrap background-absolute">
+                        <div class="slideshow__slide-background background-absolute">
+                            <div class="slideshow__slide-image-wrap background-absolute">
+                                <div class="slideshow__slide-image background-absolute" style="background-image: url('gallery/img_4.JPG');"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="slideshow__slide-caption">
+            <div class="slideshow__slide-caption-text">
+                <div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
+                    <!-- <h1 class="slideshow__slide-caption-title">Hey, take a time to relax!</h1>
+                    <a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="#">
+                        <span class="slideshow__slide-caption-subtitle-label">Everybody needs</span>
+                    </a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="slideshow__slide js-slider-home-slide is-prev" data-slide="5">
+        <div class="slideshow__slide-background-parallax background-absolute js-parallax" data-speed="-1" data-position="top" data-target="#js-header">
+            <div class="slideshow__slide-background-load-wrap background-absolute">
+                <div class="slideshow__slide-background-load background-absolute">
+                    <div class="slideshow__slide-background-wrap background-absolute">
+                        <div class="slideshow__slide-background background-absolute">
+                            <div class="slideshow__slide-image-wrap background-absolute">
+                                <div class="slideshow__slide-image background-absolute" style="background-image: url('gallery/img_5.JPG');"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="slideshow__slide-caption">
+            <div class="slideshow__slide-caption-text">
+                <div class="container js-parallax" data-speed="2" data-position="top" data-target="#js-header">
+                    <!-- <h1 class="slideshow__slide-caption-title">Hey, take a time to relax!</h1>
+                    <a class="slideshow__slide-caption-subtitle -load o-hsub -link" href="#">
+                        <span class="slideshow__slide-caption-subtitle-label">Everybody needs</span>
+                    </a> -->
+                </div>
+            </div>
+        </div>
+    </div>
+
       <div class="c-header-home_footer">
           <div class="o-container">
               <div class="c-header-home_controls -nomobile o-button-group">
